--- a/2540.最小公共值.html
+++ b/2540.最小公共值.html
@@ -23,7 +23,7 @@
 
         */
         var getCommon = function (nums1, nums2) {
-            for(let i=0,j=0;i<nums1.length,j<nums2.length;){
+            for(let i=0,j=0;i<nums1.length && j<nums2.length;){
                 if (nums1[i] == nums2[j])  return nums1[i]
                 if (nums1[i] < nums2[j]) i++;
                 if (nums1[i] > nums2[j]) j++;
